fix justified alignment of interview spans

--- a/css/_companies.scss
+++ b/css/_companies.scss
@@ -530,6 +530,10 @@
       font-size: 20px;
       font-family: montserrat;
     }
+    span {
+      text-align: left;
+      display: inline-block;
+    }
     .fa-table {
       font-size: 14px;
     }
